[tool.poetry]
name = "pdberellig"
version = "0.1.1"
description = "A toolkit for functional annotation of ligands in the PDB"
authors = ["Ibrahim Roshan Kunnakkattu <roshan@ebi.ac.uk>"]
readme = "README.md"
license = "Apache 2.0"
repository="https://github.com/PDBeurope/rellig"
keywords = ["PDB", "ligand", "cofactor", "reactant", "drug", "annotation"]

classifiers = [
    "Environment :: Console",
    "Topic :: Scientific :: Bio-Informatics :: Cheminformatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = "^3.9"
click = "8.1.7"
pdbeccdutils = "^0.8.5"
requests = "^2.32.3"
rdkit = "^2023.9.2"
sparqlwrapper = "^2.0.0"
pandas = "^2.2.3"
gemmi = "^0.6.6"


[tool.poetry.scripts]
pdberellig = "pdberellig.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^7.4.0"
pytest-cov = "^5.0.0"
sphinx = "7.2.03"
sphinx-rtd-theme = "1.3.0",
sphinx-autodoc-typehints = "1.24.0",
myst-parser = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
